navigation bar added - css/html update

--- a/starter/index.html
+++ b/starter/index.html
@@ -5,15 +5,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Lernantino // Web Developer</title>
-  <link rel="stylesheet" href="./assets/css/style.css" />
+  <title>Gabriel Pamfil / Web Dev</title>
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
   <!-- main logo / nav -->
   <header>
-    <h1>Lernantino</h1>
+    
+    <h1>Gabriel Pamfil</h1>
     <nav>
+      <ul> 
+        <li> <a href="#About me"> About me </a>  </a></li>
+        <li> <a href="#Work"> Work</a></li>
+        <li> <a href="#Contact me"> Contact me</a></li>
+
+      </ul>
     </nav>
   </header>
 
@@ -27,7 +34,7 @@
   <main class="page-wrapper">
     <!-- about me -->
     <section class="page-section" id="about">
-      <h2>About Me</h2>
+      <h2>About me</h2>
     </section>
 
     <!-- portfolio container -->
@@ -37,7 +44,7 @@
 
     <!-- contact -->
     <section class="page-section contact" id="contact">
-      <h2>Contact Me</h2>
+      <h2>Contact me</h2>
     </section>
   </main>
 </body>
