--- a/starter/index.html
+++ b/starter/index.html
@@ -46,7 +46,7 @@
           I'm a passionate and tenacious individual, that embarked on a remarkable journey into the world of web
           development with an unwavering commitment to learning and a relentless student mentality.
         </p>
-
+<br> 
         <p>Through countless hours of trial and error, I have honed my skills and build a portfolio that can showcase
           not just my technical prowess but also my unwavering commitment to excellence.</p>
       </div>
@@ -73,15 +73,18 @@
         </article>
       </div>
       <!-- <a href="https://m4r1an24.github.io/horisen-marketing-job/"> Horiseon Project <img src="./images/horiseon.png" alt=""></a>
-      <a href="https://github.com/M4r1aN24?tab=repositories">Github repositories</a>  -->
+      
 
     </section>
 
-    <!-- contact -->
-    <section id="contact">
+    contact -->
+    <section id="contact" class="contact2">
       <h2>Contact me</h2>
       <div>
       <a href="https://www.facebook.com/profile.php?id=100004795687636">Facebook Profile</a>
+      <a href=">Github repositories</a>
+      <a href="gabrielpamfil@yahoo.com">E-mail</a>
+   
     </div>
     </section>
   </main>
