modified html + css to meet standards

--- a/starter/index.html
+++ b/starter/index.html
@@ -31,7 +31,7 @@
   <section class="hero-banner">
 
     <div>
-      <h2>My Web Development journey!</h2>
+      <h1>My Web Development journey!</h1>
 
       <!-- /* add portofolio items here */ -->
     </div>
@@ -52,41 +52,37 @@
       </div>
     </section>
 
-    <!-- portfolio container -->
-    <section class="page-section" id="work">
-      <h2>Work</h2>
-      <div>
-        <article id="horiseon-marketing-job" class="gridArea">
-          <h3>Horiseon marketing project</h3>
-        </article>
-        <article id="github" class="gridArea">
-          <h3>Github Profile</h3>
-        </article>
-        <article id="ledwall" class="gridArea">
-          <h3>LED Wall</h3>
-        </article>
-        <article id="calculator" class="gridArea">
-          <h3>Calculator</h3>
-        </article>
-        <article id="run-buddy" class="gridArea">
-          <h3>Run Buddy</h3>
-        </article>
-      </div>
-      <!-- <a href="https://m4r1an24.github.io/horisen-marketing-job/"> Horiseon Project <img src="./images/horiseon.png" alt=""></a>
-      
-
-    </section>
-
-    contact -->
-    <section id="contact" class="contact2">
-      <h2>Contact me</h2>
-      <div>
-      <a href="https://www.facebook.com/profile.php?id=100004795687636">Facebook Profile</a>
-      <a href=">Github repositories</a>
-      <a href="gabrielpamfil@yahoo.com">E-mail</a>
-   
+   <!-- portfolio container -->
+   <section class="page-section" id="work">
+    <h2>Work</h2>
+    <div>
+      <article id="horiseon-marketing-job" class="gridArea">
+        <h3>Horiseon marketing project</h3>
+      </article>
+      <article id="github" class="gridArea">
+        <h3>Github Profile</h3>
+      </article>
+      <article id="ledwall" class="gridArea">
+        <h3>LED Wall</h3>
+      </article>
+      <article id="calculator" class="gridArea">
+        <h3>Calculator</h3>
+      </article>
+      <article id="run-buddy" class="gridArea">
+        <h3>Run Buddy</h3>
+      </article>
     </div>
-    </section>
-  </main>
+  </section>
+
+ 
+  <section id="contact">
+    <h2>Contact me</h2>
+    <div>
+    <a href="https://www.facebook.com/profile.php?id=100004795687636">Facebook Profile</a>
+    <a href="gabrielpamfil@yahoo.com">gabrielpamfil@yahoo.com</a>
+ 
+  </div>
+  </section>
+</main>
 </body>
 </html>
