--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <nav>
 
       <ul>
-        <li> <a href="#About me"> About me </a> </a></li>
-        <li> <a href="#Work"> Work</a></li>
-        <li> <a href="#Contact me"> Contact me</a></li>
+        <li> <a href="#about"> About me </a> </a></li>
+        <li> <a href="#work"> Work</a></li>
+        <li> <a href="#contact"> Contact me</a></li>
         <li> <a href="#Resume"> Resume</a></li>
 
       </ul>
